made timestamp a pauseable input

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <title>Time.htm</title>
 <link href=css/time.css rel=stylesheet>
 
-<div id=timestamp></div>
+<input id=timestamp>
 <hr>
 <input id=year>-<input id=month>-<input id=day> <input id=hour>:<input id=minute>:<input id=second><br>
 <input onclick=date_to_timestamp() type=button value="Date to Timestamp">
