--- a/index.htm
+++ b/index.htm
@@ -7,8 +7,8 @@
 <input id=timestamp>
 <hr>
 <input id=year>-<input id=month>-<input id=day> <input id=hour>:<input id=minute>:<input id=second><br>
-<input onclick=date_to_timestamp() type=button value="Date to Timestamp">
-  <input onclick=timestamp_to_date() type=button value="Timestamp to Date"><br>
+<input onclick=date_to_timestamp() type=button value="↑Date to Timestamp↓">
+  <input onclick=timestamp_to_date() type=button value="↓Timestamp to Date↑"><br>
 <input id=timestamp-input>
 
 <script src=js/time.js></script>
