--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,6 @@
 <input id=year>-<input id=month>-<input id=day> <input id=hour>:<input id=minute>:<input id=second><br>
 <input onclick=date_to_timestamp() type=button value="↑Date to Timestamp↓">
   <input onclick=timestamp_to_date() type=button value="↓Timestamp to Date↑"><br>
-<input id=timestamp-input>
+<input id=timestamp-input><input onclick=now() type=button value=Now>
 
 <script src=js/time.js></script>
