--- a/index.htm
+++ b/index.htm
@@ -6,8 +6,8 @@
 
 <input id=timestamp>
 <hr>
-<input id=year>-<input id=month>-<input id=day>
-  <input id=hour>:<input id=minute>:<input id=second>
+<input id=year>-<input id=month maxlength=2>-<input id=day maxlength=2>
+  <input id=hour maxlength=2>:<input id=minute maxlength=2>:<input id=second maxlength=2>
   <select id=timezone>
     <option value=0>UTC</option>
   </select><br>
