added formatted date display

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <title>Time.htm</title>
 <link href=css/time.css rel=stylesheet>
 
-<input id=timestamp>
+<input id=timestamp> <span id=date></span> UTC
 <hr>
 <input id=year>-<input id=month maxlength=2>-<input id=day maxlength=2>
   <input id=hour maxlength=2>:<input id=minute maxlength=2>:<input id=second maxlength=2>
