replaced css with common dom.css

--- a/index.htm
+++ b/index.htm
@@ -2,17 +2,12 @@
 <meta charset=utf-8>
 <meta content="width=device-width,initial-scale=1" name=viewport>
 <title>Time.htm</title>
-<link href=css/time.css rel=stylesheet>
+<link href=../common/css/dom.css rel=stylesheet>
 
 <input id=timestamp> <span id=date></span> UTC
 <hr>
-<input id=year>-<input id=month maxlength=2>-<input id=day maxlength=2>
-  <input id=hour maxlength=2>:<input id=minute maxlength=2>:<input id=second maxlength=2><br>
-<input onclick=date_to_timestamp() type=button value="↑Date to Timestamp↓">
-  <select id=timezone>
-    <option value=0>UTC</option>
-  </select>
-  <input onclick=timestamp_to_date() type=button value="↓Timestamp to Date↑"><br>
-<input id=timestamp-input><input onclick=now() type=button value=Now>
+<input id=year>-<input id=month maxlength=2>-<input id=day maxlength=2><br>
+<input id=hour maxlength=2>:<input id=minute maxlength=2>:<input id=second maxlength=2><br>
+<input onclick=date_to_timestamp() type=button value="↑Date to Timestamp↓"><select id=timezone><option value=0>UTC</option></select><input id=timestamp-input><input onclick=now() type=button value=Now><input onclick=timestamp_to_date() type=button value="↓Timestamp to Date↑">
 
 <script src=js/time.js></script>
