fixed arrow directions

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 <hr>
 <input id=year>-<input id=month maxlength=2>-<input id=day maxlength=2><br>
 <input id=hour maxlength=2>:<input id=minute maxlength=2>:<input id=second maxlength=2><br>
-<input onclick=date_to_timestamp() type=button value="↑Date to Timestamp↓"><input id=timestamp-input><input onclick=timestamp_to_date() type=button value="↓Timestamp to Date↑"><br>
+<input onclick=date_to_timestamp() type=button value="↑Date to Timestamp→"><input id=timestamp-input><input onclick=timestamp_to_date() type=button value="←Timestamp to Date↑"><br>
 <select id=timezone><option value=0>UTC</option></select><input onclick=now() type=button value=Now>
 
 <script src=js/time.js></script>
