--- a/index.htm
+++ b/index.htm
@@ -4,9 +4,9 @@
 <title>Time.htm</title>
 <link href=../common/css/dom.css rel=stylesheet>
 
-<input id=timestamp-current> <span id=date></span> UTC
+<input id=timestamp-current> <span id=date-display></span> UTC
 <hr>
-<input id=year>-<input id=month maxlength=2>-<input id=day maxlength=2><br>
+<input id=year>-<input id=month maxlength=2>-<input id=date maxlength=2><br>
 <input id=hour maxlength=2>:<input id=minute maxlength=2>:<input id=second maxlength=2><br>
 <input id=date-to-timestamp type=button value="↑Date to Timestamp→"><input id=timestamp><input id=timestamp-to-date type=button value="←Timestamp to Date↑"><br>
 <select id=timezone><option value=00>UTC</option></select><input id=now type=button value=Now>
