added common core.js usage

--- a/index.htm
+++ b/index.htm
@@ -11,5 +11,6 @@
 <input id=date-to-timestamp type=button value="↑Date to Timestamp→"><input id=timestamp><input id=timestamp-to-date type=button value="←Timestamp to Date↑"><br>
 <select id=timezone><option value=00>UTC</option></select><input id=now type=button value=Now>
 
+<script src=../common/js/core.js></script>
 <script src=../common/js/time.js></script>
 <script src=js/time.js></script>
