--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,7 @@
 <input id=year>-<input id=month maxlength=2>-<input id=date maxlength=2><br>
 <input id=hour maxlength=2>:<input id=minute maxlength=2>:<input id=second maxlength=2><br>
 <input id=date-to-timestamp type=button value="↑Date to Timestamp→"><input id=timestamp><input id=timestamp-to-date type=button value="←Timestamp to Date↑"><br>
+<input id=timestamp-seconds><br>
 <select id=timezone><option value=00>UTC</option></select><input id=now type=button value=Now>
 
 <script src=../common/js/core.js></script>
