renamed JS file to main.js

--- a/index.htm
+++ b/index.htm
@@ -15,4 +15,4 @@
 
 <script src=../common/js/core.js></script>
 <script src=../common/js/time.js></script>
-<script src=js/time.js></script>
+<script src=js/main.js></script>
