added big class to date-display

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,8 @@
 <link href=../common/css/core.css rel=stylesheet>
 <link href=../common/css/dom.css rel=stylesheet>
 
-<input id=timestamp-current> <span id=date-display></span> UTC
+<span class=big id=date-display></span> UTC<br>
+<input id=timestamp-current>
 <hr>
 <input id=year>-<input id=month maxlength=2>-<input id=date maxlength=2><br>
 <input id=hour maxlength=2>:<input id=minute maxlength=2>:<input id=second maxlength=2><br>
