updated time usage

--- a/index.htm
+++ b/index.htm
@@ -14,5 +14,6 @@
 <select id=timezone><option value=00>UTC</option></select><input id=now type=button value=Now>
 
 <script src=../common/js/core.js></script>
+<script src=../common/js/time.js></script>
 <script src=js/main.js></script>
 <script src=js/data.js></script>
