absorbed iterami/Birthday.htm

--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,19 @@
 <input id=date-to-timestamp type=button value="↑Date to Timestamp→"><input id=timestamp><input id=timestamp-to-date type=button value="←Timestamp to Date↑"><br>
 <input id=timestamp-seconds><br>
 <select id=timezone><option value=00>UTC</option></select><input id=now type=button value=Now>
+<hr>
+<div class=medium id=diff></div>
+<table>
+  <tr>
+    <td>Days
+    <td id=diff-days>
+  <tr>
+    <td>Weeks
+    <td id=diff-weeks>
+  <tr>
+    <td>Years
+    <td id=diff-years>
+</table>
 
 <script src=../common/js/core.js></script>
 <script src=../common/js/time.js></script>
