--- a/index.htm
+++ b/index.htm
@@ -5,12 +5,12 @@
 <link href=../common/css/core.css rel=stylesheet>
 
 <span class=big id=date-display></span> UTC<br>
-<input id=timestamp-current>
+<input id=timestamp-current readonly>
 <hr>
 <input id=year>-<input id=month maxlength=2>-<input id=date maxlength=2><br>
 <input id=hour maxlength=2>:<input id=minute maxlength=2>:<input id=second maxlength=2><br>
 <input id=date-to-timestamp type=button value="↑Date to Timestamp→"><input id=timestamp><input id=timestamp-to-date type=button value="←Timestamp to Date↑"><br>
-<input id=timestamp-seconds><br>
+<input id=timestamp-seconds readonly><br>
 <select id=timezone><option value=00>UTC</option></select><input id=now type=button value=Now>
 <hr>
 <div class=medium id=diff></div>
