absorbed iterami/Alarm.htm

--- a/index.htm
+++ b/index.htm
@@ -25,8 +25,15 @@
     <td>Years
     <td id=diff-years>
 </table>
+<hr>
+<input id=add-alarm type=button value=Add><input id=alarm-label value=alarm> in <input id=alarm-seconds value=3600> seconds.
+<table>
+  <tbody id=alarms-table></tbody>
+</table>
 
 <script src=../common/js/core.js></script>
+<script src=../common/js/audio.js></script>
+<script src=../common/js/entity.js></script>
 <script src=../common/js/time.js></script>
 <script src=js/main.js></script>
 <script src=js/data.js></script>
