--- a/index.htm
+++ b/index.htm
@@ -5,14 +5,12 @@
 <link href=../common/css/core.css rel=stylesheet>
 
 <span class=big id=date-display></span> UTC<br>
-<input id=timestamp-current readonly>
-<hr>
+<input id=timestamp-current readonly><br>
 <input id=year>-<input id=month maxlength=2>-<input id=date maxlength=2><br>
 <input id=hour maxlength=2>:<input id=minute maxlength=2>:<input id=second maxlength=2><br>
 <input id=date-to-timestamp type=button value="↑Date to Timestamp→"><input id=timestamp><input id=timestamp-to-date type=button value="←Timestamp to Date↑"><br>
 <input id=timestamp-seconds readonly><br>
 <select id=timezone><option value=00>UTC</option></select><input id=now type=button value=Now>
-<hr>
 <div class=medium id=diff></div>
 <table>
   <tr>
@@ -25,7 +23,6 @@
     <td>Years
     <td id=diff-years>
 </table>
-<hr>
 <input id=add-alarm type=button value=Add><input id=alarm-label value=alarm> in <input id=alarm-seconds value=3600> seconds.
 <table>
   <tbody id=alarms-table></tbody>
