made date inputs mini, simplified timestamp button labels

--- a/index.htm
+++ b/index.htm
@@ -6,9 +6,9 @@
 
 <span class=big id=date-display></span> UTC<br>
 <input id=timestamp-current readonly><br>
-<input id=year>-<input id=month maxlength=2>-<input id=date maxlength=2><br>
-<input id=hour maxlength=2>:<input id=minute maxlength=2>:<input id=second maxlength=2><br>
-<input id=date-to-timestamp type=button value="↓Date to Timestamp→"><input id=timestamp><input id=timestamp-to-date type=button value="→Timestamp to Date↑"><br>
+<input class=mini id=year>-<input class=mini id=month maxlength=2>-<input class=mini id=date maxlength=2><br>
+<input class=mini id=hour maxlength=2>:<input class=mini id=minute maxlength=2>:<input class=mini id=second maxlength=2><br>
+<input id=date-to-timestamp type=button value=⤷><input id=timestamp><input id=timestamp-to-date type=button value=⤴><br>
 <input id=timestamp-seconds readonly><br>
 <select id=timezone><option value=00>UTC</option></select><input id=now type=button value=Now>
 <div class=medium id=diff></div>
