added months diff

--- a/index.htm
+++ b/index.htm
@@ -21,6 +21,9 @@ UTC<input class=mini id=timezone><input id=now type=button value=Now><br>
     <td>Weeks
     <td id=diff-weeks>
   <tr>
+    <td>Months
+    <td id=diff-months>
+  <tr>
     <td>Years
     <td id=diff-years>
 </table>
