made alarm-seconds input mini

--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@ UTC<input class=mini id=timezone><input id=now type=button value=Now><br>
     <td>Years
     <td id=diff-years>
 </table>
-<input id=add-alarm type=button value=Add><input id=alarm-label value=alarm>in<input id=alarm-seconds value=3600>seconds
+<input id=add-alarm type=button value=Add><input id=alarm-label value=alarm>in<input class=mini id=alarm-seconds value=3600>seconds
 <table>
   <tbody id=alarms-table></tbody>
 </table>
