combined js into repo.js

--- a/index.htm
+++ b/index.htm
@@ -36,5 +36,4 @@ UTC<input class=mini id=timezone step=any type=number><input id=now type=button 
 <script src=../common/js/audio.js></script>
 <script src=../common/js/entity.js></script>
 <script src=../common/js/time.js></script>
-<script src=js/main.js></script>
-<script src=js/data.js></script>
+<script src=repo.js></script>
