--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@ UTC<input class=mini id=timezone step=any type=number><input id=now type=button 
 </table>
 <input id=add-alarm type=button value=Add><input id=alarm-label type=text value=alarm>in<input class=mini id=alarm-seconds value=3600 step=any type=number>seconds
 <table>
-  <tbody id=alarms-table></tbody>
+  <tbody id=alarms-table>
 </table>
 
 <script src=../common/js/core.js></script>
