changed timestamp-seconds to div

--- a/index.htm
+++ b/index.htm
@@ -9,8 +9,8 @@ UTC<input class=mini id=timezone step=any type=number><button id=now type=button
 <input id=timestamp-current readonly type=text><br>
 <input class=mini id=year step=any type=number>-<input class=mini id=month max=12 min=1 step=any type=number>-<input class=mini id=date max=31 min=1 step=any type=number><br>
 <input class=mini id=hour max=23 min=0 step=any type=number>:<input class=mini id=minute max=59 min=0 step=any type=number>:<input class=mini id=second max=59 min=0 step=any type=number><br>
-<button id=date-to-timestamp type=button>⤷</button><input id=timestamp step=any type=number><button id=timestamp-to-date type=button>⤴</button><br>
-<input id=timestamp-seconds readonly type=text><br>
+<button id=date-to-timestamp type=button>⤷</button><input id=timestamp step=any type=number><button id=timestamp-to-date type=button>⤴</button>
+<div id=timestamp-seconds></div>
 
 <div class=medium id=diff></div>
 <table>
